# email-verification

./: .env.example  .gitignore  INTEGRATION.md  README.md  pyproject.toml
email_verifier/: __init__.py  cli.py  disposable.py  providers.py  verifier.py
tests/: test_providers.py  test_verifier.py
